Tested: - Payee Field - Invalid Characters - User enters a payee name in the input field and taps continue.  Inline error message reads, "Invalid characters" in red. Will show up below the payee / company name input field in red. - Payee Field - Client-side validation: Invalid characters for the free form fields (memo, etc) : <>()&;'"[]{}. Invalid Characters / Non Matching Errors - User completes the details and taps add payee button. User will receive the following inline error messages in red text and the input field will be outlined in red - Nickname - Invalid characters 2 char min/30 char max. (client side) Validation after you leave the field. - Nickname Client-side validation: Invalid characters for a payee nickname: <>;"[]{} - Account # - Invalid account #  1 char min./32 char max. (client side validation) - Account# - Client-side validation: Invalid characters for account number with a payee : (){}<>"'[] - Account# - Remove server inline error - Re-enter account# - If receives a remove server inline error shows it for Re-enter account# as well - Re-enter account # -  Non matching account # 1 char min./32 char max. (client side validation) - Zip Code - Client-side validation: Invalid characters for account number with a payee : (){}<>"'[] - Zip Code - Invalid zip code 5 digit numeric - validation after you leave the field

--- a/Discover-Bank-Phone/res/layout/bank_one_button_layout.xml
+++ b/Discover-Bank-Phone/res/layout/bank_one_button_layout.xml
@@ -23,7 +23,7 @@
 	    android:layout_marginRight="@dimen/forms_inner_padding"
 	    android:background="@drawable/gray_solid_line"
 	    />
-    	
+   	 
     <ScrollView
         android:id="@+id/main_layout"
         android:layout_width="match_parent"
@@ -58,9 +58,20 @@
                 android:text="@string/note_title"
                 style="@style/field_copy"/>
              
+              <TextView
+		         android:id="@+id/general_error"
+		         android:layout_width="match_parent"
+		         android:layout_height="wrap_content"
+		         android:layout_below="@+id/top_note_text"
+		         android:layout_alignLeft="@+id/top_note_text"
+		         android:text="@string/status_text"
+		         android:textColor="@color/error_indicator"
+		         android:layout_marginBottom="@dimen/forms_inner_padding"
+		         android:visibility="gone" />
+              
             <LinearLayout
                 android:id="@+id/content_table"
-                android:layout_below="@+id/top_note_text"
+                android:layout_below="@+id/general_error"
                 android:layout_centerHorizontal="true"
                 android:orientation="vertical"
                 android:background="@drawable/rounded_table_corners_no_padding"
