US6455 : TA13657 & TA13658 - How it works modal. Implemented the how it works modal. This modal is presented to the user directly after accepting the terms and conditions or when they press the help icon on the select account screen for the check deposit flow.

--- a/Discover-Bank-Phone/res/layout/check_deposit_modal.xml
+++ b/Discover-Bank-Phone/res/layout/check_deposit_modal.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/modal_dialog"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_gravity="center" 
-    android:paddingTop="@dimen/between_related_elements_padding"
+    android:paddingTop="@dimen/modal_top_padding"
     android:paddingLeft="@dimen/groups_of_elements_padding"
     android:paddingRight="@dimen/groups_of_elements_padding"
     android:paddingBottom="@dimen/modal_top_padding">
@@ -17,5 +18,5 @@
         android:paddingBottom="@dimen/modal_orange_margin_bottom"
         android:weightSum="10">
     </LinearLayout>
-
+	
 </RelativeLayout>
