--- a/Discover-Commons/res/layout/modal_default_one_button_bottom.xml
+++ b/Discover-Commons/res/layout/modal_default_one_button_bottom.xml
@@ -1,27 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
-    android:layout_marginRight="@dimen/forms_inner_padding"
-    android:layout_marginLeft="@dimen/forms_inner_padding">
-    
-        
-    <ImageView
+    android:layout_height="wrap_content"
+    android:layout_marginLeft="@dimen/forms_inner_padding"
+    android:layout_marginRight="@dimen/forms_inner_padding" >
+
+    <View
         android:id="@+id/modal_alert_divider"
         android:layout_width="fill_parent"
         android:layout_height="5dp"
-        android:background="@drawable/modal_divider_line"
         android:layout_above="@+id/button"
-        android:visibility="visible"/>
-    
+        android:background="@drawable/shadow_gradient"
+        android:visibility="visible" />
+
     <Button
         android:id="@+id/button"
+        style="@style/call_to_action_theme"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        style="@style/call_to_action_theme"
-        android:layout_marginTop="@dimen/modal_orange_margin_top"
+        android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="@dimen/modal_orange_margin_bottom"
-        android:layout_alignParentBottom="true"/>
-    
+        android:layout_marginTop="@dimen/modal_orange_margin_top" />
+
 </RelativeLayout>
