--- a/Discover-Bank-Phone/res/layout/navigation_bank_menu_frame.xml
+++ b/Discover-Bank-Phone/res/layout/navigation_bank_menu_frame.xml
@@ -2,7 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="match_parent"
-    android:background="@color/menu_light_gray" >
+    android:background="@drawable/sliding_drawer_dots_background">
 
     <RelativeLayout
         android:id="@+id/footer_layout"
