--- a/Discover-Commons/res/layout/navigation_menu_sub_section_item.xml
+++ b/Discover-Commons/res/layout/navigation_menu_sub_section_item.xml
@@ -2,7 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="@dimen/nav_section_height"
-    android:background="@color/menu_light_gray"
+    android:background="@drawable/sliding_drawer_button_noshadow_open"
     android:orientation="horizontal" >
 
     <TextView
