--- a/Discover-Commons/res/values/strings_login.xml
+++ b/Discover-Commons/res/values/strings_login.xml
@@ -25,7 +25,7 @@
         Go to:
     </string>
     <string name="login_button_text">
-        Secure Login
+        Login
     </string>
     <string name="hide">
         Hide
