DE2989: Fixed the keyboard issue.

--- a/Discover-Bank-Phone/res/layout/atm_locator_map_search_bar.xml
+++ b/Discover-Bank-Phone/res/layout/atm_locator_map_search_bar.xml
@@ -69,6 +69,7 @@
             android:drawableRight="@drawable/atm_current_location_button"
             android:ellipsize="end"
             android:focusable="true"
+            android:imeOptions="actionDone|flagNoExtractUi"
             android:hint="@string/atm_location_search_help"
             android:inputType="textPostalAddress"
             android:textColor="@color/body_copy"
