--- a/Discover-Bank-Phone/res/drawable/login_white_panel.xml
+++ b/Discover-Bank-Phone/res/drawable/login_white_panel.xml
@@ -1,68 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android" >
 
-    <!-- Top Gradient -->
-    <item
-        android:bottom="@dimen/bottom_pad"
-        android:left="@dimen/left_pad"
-        android:right="@dimen/right_pad">
-        <shape android:shape="rectangle" >
-            <gradient
-                android:angle="90"
-                android:centerColor="#FF000000"
-                android:centerX="0.95"
-                android:endColor="#00000000"
-                android:startColor="#FF000000" >
-            </gradient>
-        </shape>
-    </item>
-
-    <!-- Left Gradient -->
-    <item
-        android:bottom="@dimen/bottom_pad"
-        android:right="@dimen/right_pad"
-        android:top="@dimen/top_pad">
-        <shape android:shape="rectangle" >
-            <gradient
-                android:angle="180"
-                android:centerColor="#FF000000"
-                android:centerX="0.9"
-                android:endColor="#00000000"
-                android:startColor="#FF000000" >
-            </gradient>
-        </shape>
-    </item>
-
-    <!-- Right Gradient -->
-    <item
-        android:bottom="@dimen/bottom_pad"
-        android:left="@dimen/left_pad"
-        android:top="@dimen/top_pad">
-        <shape android:shape="rectangle" >
-            <gradient
-                android:angle="0"
-                android:centerColor="#FF000000"
-                android:centerX="0.9"
-                android:endColor="#00000000"
-                android:startColor="#FF000000" >
-            </gradient>
-        </shape>
-    </item>
-
-    <!-- Bottom Gradient -->
-    <item
-        android:left="@dimen/left_pad"
-        android:right="@dimen/right_pad"
-        android:top="@dimen/top_pad">
-        <shape android:shape="rectangle" >
-            <gradient
-                android:angle="270"
-                android:centerColor="#FF000000"
-                android:centerX="0.9"
-                android:endColor="#00000000"
-                android:startColor="#FF000000" >
-            </gradient>
-        </shape>
+    <!-- Gradient -->
+    <item android:drawable="@drawable/login_white_bkgrd_gradient">
+        
     </item>
 
     <!-- White Panel -->
