--- a/Discover-Bank-Phone/res/layout/bank_header_progress.xml
+++ b/Discover-Bank-Phone/res/layout/bank_header_progress.xml
@@ -1,100 +1,65 @@
 <?xml version="1.0" encoding="utf-8"?>
 <merge xmlns:android="http://schemas.android.com/apk/res/android" >
 
-    <RelativeLayout
+    <!--   android:layout_marginLeft="@dimen/forms_inner_padding" -->
+    <LinearLayout
         android:id="@+id/location_text"
         android:layout_width="match_parent"
         android:layout_height="@dimen/header_progress_height"
-        android:layout_marginBottom="@dimen/forms_inner_padding"
-        android:layout_marginLeft="@dimen/forms_inner_padding"
-        android:background="@drawable/light_gray_bkgrd">
+        android:layout_marginBottom="@dimen/forms_inner_padding"  
+        android:orientation="horizontal"
+        android:background="@drawable/light_gray_bkgrd" >
 
-        <ImageView
-            android:id="@+id/step1_confirm"
-            android:layout_alignParentLeft="true"
-            style="@style/status_check_mark" 
-            android:layout_marginTop="@dimen/between_related_elements_padding"
-            android:layout_marginRight="@dimen/between_related_elements_padding"/>
-
-        <LinearLayout
+        <TextView
             android:id="@+id/step_1"
-            android:layout_toRightOf="@+id/step1_confirm"
+            android:layout_width="wrap_content"
             android:layout_height="fill_parent"
-            style="@style/status_linear_layouts" >
+            android:layout_gravity="center"
+            android:drawableLeft="@drawable/gray_check_mark"
+            android:drawablePadding="@dimen/breadcrumb_drawable_padding"
+            android:paddingTop="@dimen/breadcrumb_step_toppadding"
+            android:drawableTop="@drawable/orange_down_arrow"
+            android:singleLine="true"
+            android:gravity="left|center_vertical"
+            android:text="@string/bank_deposit_enter_details" />
 
-            <ImageView
-                android:id="@+id/first_indicator"
-                style="@style/status_indicator_image" />
+         
+        <TextView
+            android:id="@+id/step_2"
+            android:layout_width="wrap_content"
+            android:layout_height="fill_parent"
+            android:drawableLeft="@drawable/gray_check_mark"
+            android:layout_marginLeft="@dimen/breadcrumb_step2_landscape_padding"
+            android:layout_marginRight="@dimen/breadcrumb_step2_landscape_padding"
+            android:drawablePadding="@dimen/breadcrumb_drawable_padding"
+            android:drawableTop="@drawable/orange_down_arrow"
+            android:gravity="center"
+            android:paddingTop="@dimen/breadcrumb_step_toppadding"
+            android:singleLine="true"
+            android:text="@string/bank_deposit_capture" />
 
-            <TextView
-                android:id="@+id/step1_title"
-                android:layout_weight="0.50"
-                android:gravity="center"
-                android:text="@string/bank_deposit_enter_details"        
-                style="@style/status_indicator_text" />
-        </LinearLayout>
+
+        <TextView
+            android:id="@+id/step_3"
+            android:layout_width="wrap_content"
+            android:layout_height="fill_parent"
+            android:drawableTop="@drawable/orange_down_arrow"
+            android:paddingTop="@dimen/breadcrumb_step_toppadding"
+            android:drawablePadding="@dimen/breadcrumb_drawable_padding"
+            android:gravity="right|center_vertical"
+            android:singleLine="true"
+            android:layout_marginRight="@dimen/forms_inner_padding"
+            android:text="@string/bank_deposit_confirmation" />
 
         <ImageView
-            android:id="@+id/step2_confirm"
-            android:layout_toRightOf="@+id/step_1"
-            android:layout_marginTop="@dimen/between_related_elements_padding"
-            android:layout_height="fill_parent"
-            android:visibility="gone"
-            style="@style/status_check_mark" />
-           
-        <LinearLayout
-            android:id="@+id/step_2"
-            style="@style/status_linear_layouts" 
-            android:layout_toRightOf="@+id/step2_confirm"
-            android:layout_toLeftOf="@+id/step_3" 
-            android:layout_height="fill_parent"
-            android:gravity="center">
-
-            <ImageView
-                android:id="@+id/middle_indicator"
-                style="@style/status_indicator_image"
-                android:layout_marginRight="@dimen/between_related_elements_padding"  />
-
-            <TextView
-                android:id="@+id/step2_title"
-                android:layout_marginTop="@dimen/between_related_elements_padding"
-                android:text="@string/bank_deposit_capture"
-                android:layout_weight="0.50"
-                android:gravity="center"
-                style="@style/status_indicator_text"/>
-        </LinearLayout>
-
-        <LinearLayout
-            android:id="@+id/step_3"
-            style="@style/status_linear_layouts" 
-            android:layout_alignParentTop="true"
-            android:layout_height="fill_parent"
-            android:layout_toLeftOf="@+id/help_view" >
-
-            <ImageView
-                android:id="@+id/last_indicator"
-                style="@style/status_indicator_image" 
-                android:layout_marginRight="@dimen/between_related_elements_padding"/>
-
-            <TextView
-                android:id="@+id/step3_title"
-                android:layout_marginTop="@dimen/between_related_elements_padding"
-                android:text="@string/bank_deposit_confirmation"
-                android:layout_weight="0.50"
-                android:gravity="center"
-                style="@style/status_indicator_text" />
-        </LinearLayout>
-
-		<ImageView
-	        android:id="@+id/help_view"
-	        android:layout_width="wrap_content"
-	        android:layout_height="wrap_content"	        
-	        android:layout_centerVertical="true"
-	        android:layout_alignParentRight="true"
-	        android:layout_marginLeft="@dimen/breadcrumb_help_leftpadding"
-	        android:layout_marginRight="@dimen/breadcrumb_help_rightpadding"
-	        android:layout_marginBottom="@dimen/between_related_elements_padding"
-	        android:src="@drawable/question_mark_icon"/>  
-    </RelativeLayout>
+            android:id="@+id/help_view"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="0.10"
+            android:layout_gravity="center_vertical"
+            android:contentDescription="@null"
+            android:paddingRight="@dimen/breadcrumb_help_rightpadding"
+            android:src="@drawable/question_mark_icon" />
+    </LinearLayout>
 
 </merge>
