--- a/Discover-Bank-Phone/res/values/strings_bank_deposit.xml
+++ b/Discover-Bank-Phone/res/values/strings_bank_deposit.xml
@@ -13,6 +13,12 @@
     <string name="bank_deposit_forbidden_title">Mobile Check\nDeposit Unavailable</string>
     <string name="bank_deposit_forbidden_message">Please contact us for assistance in accessing the Mobile Check Deposit feature.</string>
     <string name="bank_deposit_forbidden_number">1&#8211;800&#8211;450&#8211;7067</string>
+    <string name="bank_deposit_received_title">Deposit Received</string>
+    <string name="bank_deposit_received_actionbutton">Deposit Another Check</string>
+    <string name="bank_deposit_received_actionlink">View This Transaction</string>
+    <string name="bank_deposit_received_confirmation">Confirmation #: </string>
+    <string name="bank_deposit_received_note">Note</string>
+    <string name="bank_deposit_received_notetext">You will be receiving a confirmation e-mail shortly. Please retain your check in a safe place for at least 60 days. Checks deposited before {0} will be posted to your account on the next business day.</string>
     <string name="capture">Capture</string>
     <string name="picture_confirm">Confirm</string>
     <string name="front">Front</string>
