ID: DE2978 - Add New Payee button in Manage Payees is incorrect (Android) (QC# 89800) ID: DE3010 - "You have no payees set up" text should be displayed as "You currently have no payees set up" ID: DE3047 - Provide Feedback Located on Transaction Details Screen (Android) (QC# 90031) ID: DE2979 - Random "payee" subheader located on Payee Details page (Android) (QC# 89801)
Tested:
Verified Add Payee String shows up for Select Payee from Pay Bills Menu Option
Verified Add New Payee String shows up for Select Payee from Manage Payees
Verified String is displayed correctly for Pay Bills - Select Payee used asystest515/pass123$
Verified provide feedback is not show in activity view pager using account asysuat501/pass123$
Verified Payee Title is not shown for Payee Details View Pager

--- a/Discover-Bank-Phone/res/layout/select_payee.xml
+++ b/Discover-Bank-Phone/res/layout/select_payee.xml
@@ -70,7 +70,7 @@
             android:layout_marginTop="@dimen/orange_button_margin_top"
             android:layout_below="@+id/content"
             android:layout_centerHorizontal="true"
-            android:text="@string/select_payee_add_new" />
+            android:text="@string/select_payee_add" />
 
     </RelativeLayout>
 
