DE3007 - Wrong inline error messages are getting displayed for Nick Name Re enter account number and Enter Payee Name (QC# 89943)
Tested:
Verified "Non-matching account #" is shown for "Re-Enter Account #" field in both portrait and landscape orientations when text is not valid
Verified "Invalid Characters" is shown for Nick-name field in both portrait and landscape orientations when text is not valid
Verified "Invalid Characters" is shown in Enter Payee Name - Search field

--- a/Discover-Bank-Phone/res/values/strings_bank_payees.xml
+++ b/Discover-Bank-Phone/res/values/strings_bank_payees.xml
@@ -4,8 +4,7 @@
     <string name="bank_payee_enter_name">Enter Payee Name</string>
     <string name="bank_payee_company">Payee / Company Name</string>
     <string name="bank_invalid_characters">Invalid characters</string>
-    <string name="bank_invalid_num_characters">Invalid number of characters</string>
-    <string name="bank_nonmatching_acct">Non-matching #</string>
+    <string name="bank_nonmatching_acct">Non-matching account #</string>
     <string name="bank_invalid_acct">Invalid account #</string>
     <string name="bank_invalid_zip">Invalid zip code</string>
     <string name="bank_manage_payees">Manage Payees</string>
